@@ -8,4 +8,6 @@ body {
 .prefixed {
   user-select: none;
 }
-
+.fixture1 {
+  color: mintcream;
+}
