@@ -1,0 +1,4 @@
+
+.fixture2 {
+  color: peachpuff;
+}
