@@ -40,10 +40,12 @@ module.exports = function (config, opts) {
     var sourcemaps = require('gulp-sourcemaps');
     var autoprefixer = require('gulp-autoprefixer');
     var csso = require('gulp-csso');
+    var concat = require('gulp-concat');
     config.sassOptions.importer = require('node-sass-tilde-importer');
 
     return gulp.src(config.src)
       .pipe(config.maps ? sourcemaps.init() : gutil.noop())
+      .pipe(config.concat ? concat(config.concat) : gutil.noop())
       .pipe(sass(config.sassOptions).on('error', sass.logError))
       .pipe(config.prefix ? autoprefixer(config.prefix) : gutil.noop())
       .pipe(csso(config.csso))
