@@ -1,5 +1,6 @@
 Development
 -----------
+- Fix concat option for build:scss
 
 1.0.0-rc5
 ---------
